--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes auto;
+worker_processes 112;
 #daemon off;
 #error_log  /var/log/nginx/error.log debug;
 worker_rlimit_nofile 1000000;
@@ -7,22 +7,22 @@ events {
     use epoll;
     worker_connections  65535;
     multi_accept on;
-    accept_mutex on;
+    accept_mutex off;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  0;
+    #sendfile        on;
+    #keepalive_timeout  0;
 
     log_format main '$status $body_bytes_sent '
                      '$upstream_response_time "$request"';
-     access_log  /var/log/nginx/access.log  main;
-     error_log  /var/log/nginx/error.log debug;
+     #access_log  /var/log/nginx/access.log  main;
+     #error_log  /var/log/nginx/error.log debug;
 
     server {
-        listen   3000 reuseport backlog=131072 so_keepalive=off rcvbuf=65536 sndbuf=65536 default_server;
+        listen   3000 reuseport;
         server_name  localhost;
 
         #server_tokens off;
@@ -38,9 +38,9 @@ http {
         }
 
 
-        location ~ ^/get_text {
+        location ~ ^/user {
             default_type text;
-            return 200 "hello world!";
+            return 200 "user:nginx";
         }
 
         location /hello {
